--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@next/font": "13.4.4",
+    "@picocss/pico": "^1.5.10",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.4",
+    "sass": "^1.62.1",
     "typescript": "5.1.3"
   }
 }
